--- a/.config/config.json5
+++ b/.config/config.json5
@@ -1,13 +1,12 @@
 {
   "keybindings": {
     "Home": {
-      "<q>": "Quit", // Quit the application
       "<j>": "ScheduleIncrement",
       "<k>": "ScheduleDecrement",
       "<l>": "ToggleShowHelp",
       "</>": "EnterInsert",
-      "<Ctrl-d>": "Quit", // Another way to quit
-      "<Ctrl-c>": "Quit", // Yet another way to quit
+      "<Ctrl-d>": "Quit", // Quit the application
+      "<Ctrl-c>": "Quit", // Another way to quit
       "<Ctrl-z>": "Suspend", // Suspend the application
       "<left>": "NavigateList(Left)",
       "<right>": "NavigateList(Right)",
