--- a/Cargo.toml
+++ b/Cargo.toml
@@ -47,3 +47,4 @@ tracing = "0.1.37"
 tracing-error = "0.2.0"
 tracing-subscriber = { version = "0.3.17", features = ["env-filter", "serde"] }
 tui-input = { version = "0.8.0", features = ["serde"] }
+unicode-width = "0.1.11"
