feat: add mode switcher component

--- a/.config/config.json5
+++ b/.config/config.json5
@@ -21,6 +21,7 @@
       "<up>": "Home.NavigateList(Up)",
       "<down>": "Home.NavigateList(Down)",
       "<l>": "Engine.ToggleShowHelp",
+      "<Esc>": "Engine.ToggleShowModeSwitcher"
     }
   }
 }
