refactor: rename project to ratatui-experimentation

--- a/.envrc
+++ b/.envrc
@@ -1,3 +1,3 @@
-export BUCKETINATOR_CONFIG=`pwd`.config
-export BUCKETINATOR_DATA=`pwd`.data
-export BUCKETINATOR_LOG_LEVEL=debug
+export RATATUI_EXPERIMENTATION_CONFIG=`pwd`.config
+export RATATUI_EXPERIMENTATION_DATA=`pwd`.data
+export RATATUI_EXPERIMENTATION_LOG_LEVEL=debug
